-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: Internal Code
-
Fully Compatible
-
ALL
-
QE 2022-10-17, QE 2022-10-31
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Uninitialized pointer field
The pointer field will point to an arbitrary memory location, any attempt to write may cause corruption. A pointer field is not initialized in the constructor
/src/mongo/db/query/datetime/date_time_support.h:389: UNINIT_CTOR 133944 The compiler-generated constructor for this class does not initialize "_tzInfo".
- is caused by
-
SERVER-70039 Implement optimization for $dateTrunc expression
-
- Closed
-