SERVER-70228 Initialize unused pointer field in TimeZone